[package]
name = "gnews_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
reqwest = { version="0.11.24", features=["blocking", "json"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
failure = "0.1.8"
urlencoding = "2.1.3"
lru = "0.12.4"

[env]
RUST_LOG = "info"
RUST_BACKTRACE = 1